--- a/skokoban/skokoban/skokoban.csproj
+++ b/skokoban/skokoban/skokoban.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{7A337FC1-492A-442E-9BA8-458C6004EA5C}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>skokoban</RootNamespace>
+    <RootNamespace>sokoban</RootNamespace>
     <AssemblyName>skokoban</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Menu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
