--- a/skokoban/skokoban/skokoban.csproj
+++ b/skokoban/skokoban/skokoban.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Class2.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="Player.cs" />
