--- a/skokoban/skokoban/skokoban.csproj
+++ b/skokoban/skokoban/skokoban.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{7A337FC1-492A-442E-9BA8-458C6004EA5C}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>sokoban</RootNamespace>
+    <RootNamespace>Constant</RootNamespace>
     <AssemblyName>skokoban</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -54,6 +54,8 @@
     <None Include="App.config" />
     <None Include="ClassDiagram1.cd" />
     <None Include="ClassDiagram2.cd" />
+    <None Include="ClassDiagram3.cd" />
+    <None Include="ClassDiagram4.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
